--- a/product.html
+++ b/product.html
@@ -1,173 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Product</title>
-        <link
-            href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-            rel="stylesheet"
-        />
-    </head>
-    <body style="background-color: #f5f5f7">
-        <div id="navbar">
-            <!-- navbar goes here -->
-            <nav style="background-color: #ffffff">
-                <div class="max-w-6xl mx-auto px-4">
-                    <div class="flex justify-between">
-                        <div class="flex space-x-4">
-                            <!-- logo -->
-                            <div>
-                                <a
-                                    href="#"
-                                    class="
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+</head>
+
+<body style="background-color: #f5f5f7">
+    <div id="navbar">
+        <!-- navbar goes here -->
+        <nav style="background-color: #ffffff">
+            <div class="max-w-6xl mx-auto px-4">
+                <div class="flex justify-between">
+                    <div class="flex space-x-4">
+                        <!-- logo -->
+                        <div>
+                            <a href="#" class="
                                         flex
                                         items-center
                                         py-5
                                         px-2
                                         text-gray-700
                                         hover:text-gray-900
-                                    "
-                                >
-                                    <svg
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        class="h-8 w-8"
-                                        viewBox="0 0 20 20"
-                                        fill="currentColor"
-                                    >
-                                        <path
-                                            d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
-                                        />
-                                    </svg>
-                                </a>
-                            </div>
-
-                            <!-- primary nav -->
-                            <div class="hidden md:flex items-center space-x-5">
-                                <a
-                                    href="#"
-                                    class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    "
-                                    >Mac</a
-                                >
-                                <a
-                                    href="#"
-                                    class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    "
-                                    >iPad</a
-                                >
-                                <a
-                                    href="#"
-                                    class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    "
-                                    >iPhone</a
-                                >
-                                <a
-                                    href="#"
-                                    class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    "
-                                    >Watch</a
-                                >
-                                <a
-                                    href="#"
-                                    class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    "
-                                    >Airpods</a
-                                >
-                            </div>
-                        </div>
-
-                        <!-- secondary nav -->
-                        <div class="hidden md:flex items-center space-x-1">
-                            <a href="" class="py-5 px-3">Bag</a>
-                        </div>
-
-                        <!-- mobile button goes here -->
-                        <div class="md:hidden flex items-center">
-                            <button class="mobile-menu-button">
-                                <svg
-                                    class="w-6 h-6"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    fill="none"
-                                    viewBox="0 0 24 24"
-                                    stroke="currentColor"
-                                >
+                                    ">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20"
+                                    fill="currentColor">
                                     <path
-                                        stroke-linecap="round"
-                                        stroke-linejoin="round"
-                                        stroke-width="2"
-                                        d="M4 6h16M4 12h16M4 18h16"
-                                    />
+                                        d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
                                 </svg>
-                            </button>
+                            </a>
+                        </div>
+
+                        <!-- primary nav -->
+                        <div class="hidden md:flex items-center space-x-5">
+                            <a href="#" class="
+                                        py-5
+                                        px-3
+                                        text-gray-700
+                                        hover:text-gray-900 hover:underline
+                                    ">Mac</a>
+                            <a href="#" class="
+                                        py-5
+                                        px-3
+                                        text-gray-700
+                                        hover:text-gray-900 hover:underline
+                                    ">iPad</a>
+                            <a href="#" class="
+                                        py-5
+                                        px-3
+                                        text-gray-700
+                                        hover:text-gray-900 hover:underline
+                                    ">iPhone</a>
+                            <a href="#" class="
+                                        py-5
+                                        px-3
+                                        text-gray-700
+                                        hover:text-gray-900 hover:underline
+                                    ">Watch</a>
+                            <a href="#" class="
+                                        py-5
+                                        px-3
+                                        text-gray-700
+                                        hover:text-gray-900 hover:underline
+                                    ">Airpods</a>
                         </div>
                     </div>
-                </div>
 
-                <!-- mobile menu -->
-                <div class="mobile-menu hidden md:hidden">
-                    <a
-                        href="#"
-                        class="block py-2 px-4 text-sm hover:bg-gray-200"
-                        >Features</a
-                    >
-                    <a
-                        href="#"
-                        class="block py-2 px-4 text-sm hover:bg-gray-200"
-                        >Pricing</a
-                    >
-                </div>
-            </nav>
-        </div>
+                    <!-- secondary nav -->
+                    <div class="hidden md:flex items-center space-x-1">
+                        <a href="" class="py-5 px-3">Bag</a>
+                    </div>
 
-        <div
-            class="
+                    <!-- mobile button goes here -->
+                    <div class="md:hidden flex items-center">
+                        <button class="mobile-menu-button">
+                            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h16M4 18h16" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- mobile menu -->
+            <div class="mobile-menu hidden md:hidden">
+                <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Features</a>
+                <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
+            </div>
+        </nav>
+    </div>
+
+    <div class="
                 flex
                 w-full
                 text-gray-900 text-4xl text-bold
                 justify-center
                 pt-10
-            "
-        >
-            Product List
-        </div>
+            ">
+        Product List
+    </div>
 
-        <div class="max-w-2xl mx-auto px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-            <div
-                id="products"
-                class="
+    <div class="max-w-2xl mx-auto px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+        <div id="products" class="
                     mt-6
                     grid grid-cols-1
                     gap-y-10 gap-x-6
                     sm:grid-cols-2
                     lg:grid-cols-4
                     xl:gap-x-8
-                "
-            ></div>
-        </div>
+                "></div>
+    </div>
 
-        <script src="products.js"></script>
-        <script src="navbar.js"></script>
-    </body>
+    <script src="productsList.js" type="module"></script>
+    <script src="navbar.js"></script>
+</body>
+
 </html>
