--- a/product.html
+++ b/product.html
@@ -7,92 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
+    </style>
 </head>
 
 <body style="background-color: #f5f5f7">
     <div id="navbar">
         <!-- navbar goes here -->
-        <nav style="background-color: #ffffff">
-            <div class="max-w-6xl mx-auto px-4">
-                <div class="flex justify-between">
-                    <div class="flex space-x-4">
-                        <!-- logo -->
-                        <div>
-                            <a href="#" class="
-                                        flex
-                                        items-center
-                                        py-5
-                                        px-2
-                                        text-gray-700
-                                        hover:text-gray-900
-                                    ">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 20 20"
-                                    fill="currentColor">
-                                    <path
-                                        d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
-                                </svg>
-                            </a>
-                        </div>
-
-                        <!-- primary nav -->
-                        <div class="hidden md:flex items-center space-x-5">
-                            <a href="#" class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    ">Mac</a>
-                            <a href="#" class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    ">iPad</a>
-                            <a href="#" class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    ">iPhone</a>
-                            <a href="#" class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    ">Watch</a>
-                            <a href="#" class="
-                                        py-5
-                                        px-3
-                                        text-gray-700
-                                        hover:text-gray-900 hover:underline
-                                    ">Airpods</a>
-                        </div>
-                    </div>
-
-                    <!-- secondary nav -->
-                    <div class="hidden md:flex items-center space-x-1">
-                        <a href="" class="py-5 px-3">Bag</a>
-                    </div>
-
-                    <!-- mobile button goes here -->
-                    <div class="md:hidden flex items-center">
-                        <button class="mobile-menu-button">
-                            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16M4 18h16" />
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- mobile menu -->
-            <div class="mobile-menu hidden md:hidden">
-                <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Features</a>
-                <a href="#" class="block py-2 px-4 text-sm hover:bg-gray-200">Pricing</a>
-            </div>
-        </nav>
     </div>
 
     <div class="
@@ -101,8 +23,8 @@
                 text-gray-900 text-4xl text-bold
                 justify-center
                 pt-10
-            ">
-        Product List
+            " style="font-family: 'Prompt', sans-serif; font-size: 3em;">
+        <b>iPhone รุ่นไหนที่ใช่สำหรับคุณ</b>
     </div>
 
     <div class="max-w-2xl mx-auto px-4 sm:px-6 lg:max-w-7xl lg:px-8">
