--- a/product.html
+++ b/product.html
@@ -14,32 +14,21 @@
 
 <body style="background-color: #f5f5f7">
     <div id="navbar">
-        <!-- navbar goes here -->
+        <!-- navbar -->
     </div>
 
-    <div class="
-                flex
-                w-full
-                text-gray-900 text-4xl text-bold
-                justify-center
-                pt-10
-            " style="font-family: 'Prompt', sans-serif; font-size: 3em;">
-        <b>iPhone รุ่นไหนที่ใช่สำหรับคุณ</b>
+    <div id="header">
+        <!-- Header -->
     </div>
 
     <div class="max-w-2xl mx-auto px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-        <div id="products" class="
-                    mt-6
-                    grid grid-cols-1
-                    gap-y-10 gap-x-6
-                    sm:grid-cols-2
-                    lg:grid-cols-4
-                    xl:gap-x-8
-                "></div>
+        <div id="products">
+            <!-- Products List -->
+        </div>
     </div>
 
-    <script src="productsList.js" type="module"></script>
     <script src="navbar.js"></script>
+    <script src="productsList.js" type="module"></script>
 </body>
 
 </html>
